--- a/index.html
+++ b/index.html
@@ -35,7 +35,18 @@
     </div>
 
     <h3>justify-content:</h3>
-    <h4></h4>
+    <h4><flex-start></h4>
+        <div class="conteiner display-flex jc-flex-start">
+        <div class="item">1</div>
+        <div class="item">2</div>
+        <div class="item">3</div>
+        <div class="item">4</div>
+        <div class="item">5</div>
+        </div>
+
+        <img src="./imagens/jc-flex-start.png" alt="">
+        
+
     
 </body>
 </html>
